refactor: 매직넘버 상수화 및 코드 가독성 개선